# rsmail

./: README.md
.github/workflows/: ci.yml  release.yml
parser/: Cargo.toml  Makefile
parser/scripts/: build.sh  install.sh
parser/src/: parser.rs  parser_test.rs
parser/test/: invalid.json  valid.json
sender/: Cargo.toml
sender/config/: sender.json
sender/scripts/: build.sh
sender/src/: sender.rs  sender_test.rs
sender/test/: invalid.json
