# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sender"
version = "1.0.0"
edition = "2021"
rust-version = "1.74.1"
authors = ["Jia Jia <angersax@sina.com>"]
include = [
    "src/**/*",
    "Cargo.toml"
]
description = "mail sender"
repository = "https://github.com/craftslab/rsmail"
documentation = "https://github.com/craftslab/rsmail"
homepage = "https://github.com/craftslab/rsmail"
keywords = ["mail", "sender", "rust"]
categories = ["mail"]
license = "Apache-2.0"
readme = "../README.md"

[[bin]]
name = "sender"
path = "src/sender.rs"

[profile.release]
strip = "debuginfo"

[dependencies]
clap = "4.4.11"
ldap3 = "0.11.3"
openssl = { version = "0.10.62", features = ["vendored"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

[badges]
maintenance = { status = "actively-developed" }
